--- a/EDJ/src/styles/Header.css
+++ b/EDJ/src/styles/Header.css
@@ -15,6 +15,9 @@
 
     box-sizing: border-box;
     padding: 3rem 6rem 3rem;
+
+    background-size: cover;
+    background-position: center;
 }
 
 .Header h1, .Header h2 {
